# parallel_computing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Benchmark.md  OpenMp.md  compilers_setup.md
src/: main.cpp
src/lesson_1/: CMakeLists.txt
src/lesson_1/include/: lesson_lib.h
src/lesson_1/src/: lesson_lib.cpp
src/lesson_1/test/: test_cpp_lib.cpp
src/utils/: CMakeLists.txt
src/utils/include/: measurment.h  utils.h
src/utils/src/: utils.cpp
